# gem-daily-downloads

./: .gitignore  Cargo.toml  commit-months  errors.csv  generate-yanks  yanks.txt
.github/workflows/: refresh.yml
dates/: 2013-06-27.csv  2013-06-28.csv  2013-06-29.csv  2013-06-30.csv  2013-07-01.csv  2013-07-02.csv  2013-07-03.csv  2013-07-04.csv  2013-07-05.csv  2013-07-06.csv  2013-07-07.csv  2013-07-08.csv  2013-07-09.csv  2013-07-10.csv  2013-07-11.csv  2013-07-12.csv  2013-07-13.csv  2013-07-14.csv  2013-07-15.csv  2013-07-16.csv  2013-07-17.csv  2013-07-18.csv  2013-07-19.csv  2013-07-20.csv  2013-07-21.csv  2013-07-22.csv  2013-07-23.csv  2013-07-24.csv  2013-07-25.csv  2013-07-26.csv  2013-07-27.csv  2013-07-28.csv  2013-07-29.csv  2013-07-30.csv  2013-07-31.csv  2013-08-01.csv  2013-08-02.csv  2013-08-03.csv  2013-08-04.csv  2013-08-05.csv  (+4199 more)
dates/2013/06/: 2013-06-27.csv  2013-06-28.csv  2013-06-29.csv  2013-06-30.csv
dates/2013/07/: 2013-07-01.csv  2013-07-02.csv  2013-07-03.csv  2013-07-04.csv  2013-07-05.csv  2013-07-06.csv  2013-07-07.csv  2013-07-08.csv  2013-07-09.csv  2013-07-10.csv  2013-07-11.csv  2013-07-12.csv  2013-07-13.csv  2013-07-14.csv  2013-07-15.csv  2013-07-16.csv  2013-07-17.csv  2013-07-18.csv  2013-07-19.csv  2013-07-20.csv  2013-07-21.csv  2013-07-22.csv  2013-07-23.csv  2013-07-24.csv  2013-07-25.csv  2013-07-26.csv  2013-07-27.csv  2013-07-28.csv  2013-07-29.csv  2013-07-30.csv  2013-07-31.csv
dates/2013/08/: 2013-08-01.csv  2013-08-02.csv  2013-08-03.csv  2013-08-04.csv  2013-08-05.csv  2013-08-06.csv  2013-08-07.csv  2013-08-08.csv  2013-08-09.csv  2013-08-10.csv  2013-08-11.csv  2013-08-12.csv  2013-08-13.csv  (+18 more)
src/: main.rs
(+4296 files in other folders)
