[package]
name = "daily-downloads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.133"
time = { version = "0.3.36", features = ["serde", "serde-human-readable"] }
serde = { version = "1.0.215", features = ["derive"] }
indicatif = { version = "*", features = ["rayon", "improved_unicode"] }
rayon = "1.10.0"
csv = "1.3.1"
rusqlite = { version = "0.32.0", features = ["bundled", "time"] }
ureq = { version = "^3.0.0-rc3", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-indicatif = "0.3.8"
url = "2.5.4"
itertools = "0.14.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
