[package]
name = "daily-downloads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = "^4"
clap_derive = "^4"
csv = "1.3.1"
enum_variant_type = "0.3.1"
humantime = "2.1.0"
indicatif = { version = "*", features = ["rayon", "improved_unicode"] }
itertools = "0.14.0"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
rusqlite = { version = "0.32.0", features = ["bundled", "time"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-indicatif = "0.3.8"
tracing-subscriber = "0.3.19"
ureq = { version = "^3.0.0-rc3", features = ["json"] }
url = "2.5.4"
urlencoding = "2.1.3"
